# openclaw

./: CHANGELOG.md  package-lock.json  package.json  pnpm-lock.yaml  tsdown.config.ts
scrapling-service/: Dockerfile  pyproject.toml  requirements.txt  scrapling-service.service
scrapling-service/scrapling_service/: __init__.py  app.py  cli.py  config.py  fetchers.py  server.py  sessions.py
scrapling-service/tests/: test_app.py  test_fetchers.py  test_sessions.py
scripts/: watch-node.mjs  write-cli-compat.ts
src/agents/: channel-tools.test.ts  channel-tools.ts  domain-categories.test.ts  domain-categories.ts  model-selection.ts  openclaw-gateway-tool.test.ts  openclaw-tools.agents.test.ts  openclaw-tools.camera.test.ts  openclaw-tools.session-status.test.ts  openclaw-tools.sessions.test.ts  openclaw-tools.subagents.sessions-spawn-allows-cross-agent-spawning-configured.test.ts  openclaw-tools.subagents.sessions-spawn-announces-agent-wait-lifecycle-events.test.ts  openclaw-tools.subagents.sessions-spawn-applies-model-child-session.test.ts  openclaw-tools.subagents.sessions-spawn-normalizes-allowlisted-agent-ids.test.ts  openclaw-tools.subagents.sessions-spawn-prefers-per-agent-subagent-model.test.ts  openclaw-tools.subagents.sessions-spawn-resolves-main-announce-target-from.test.ts  openclaw-tools.ts  pi-tools-agent-config.test.ts  pi-tools.create-openclaw-coding-tools.adds-claude-style-aliases-schemas-without-dropping-b.test.ts  pi-tools.create-openclaw-coding-tools.adds-claude-style-aliases-schemas-without-dropping-d.test.ts  pi-tools.policy.ts  pi-tools.ts  (+21 more)
(+412 files in other folders)
