[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scrapling-service"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["scrapling>=0.4", "fastapi>=0.115", "uvicorn[standard]>=0.34", "click>=8.1"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27", "pytest-asyncio>=0.24"]

[project.scripts]
scrapling-cli = "scrapling_service.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
